--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Reservation</title>
+    <title>GameOn | Thomas Tetrel</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="stylesheet" href="modal.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -60,53 +60,61 @@
               name="reserve"
               action="index.html"
               method="get"
-              onsubmit="return validate();"
             >
               <div
                 class="formData">
-                <label>Prénom</label><br>
+                <label for="first">Prénom</label><br>
                 <input
-                  class="text-control"
+                  class="text-control inpPrenom"
                   type="text"
                   id="first"
                   name="first"
                   minlength="2"
+                  onkeydown="if(event.keyCode==32) return false;"
                 /><br>
+                <span id="prenom-error" class="error-message"></span>
               </div>
               <div
                 class="formData">
-                <label>Nom</label><br>
+                <label for="last">Nom</label><br>
                 <input
-                  class="text-control"
+                  class="text-control inpNom"
                   type="text"
                   id="last"
                   name="last"
+                  onkeydown="if(event.keyCode==32) return false;"
                 /><br>
+                <span id="nom-error" class="error-message"></span>
               </div>
               <div
                 class="formData">
-                <label>E-mail</label><br>
+                <label for="email">E-mail</label><br>
                 <input
-                  class="text-control"
+                  class="text-control inpEmail"
                   type="email"
                   id="email"
                   name="email"
+                  onkeydown="if(event.keyCode==32) return false;"
                 /><br>
+                <span id="email-error" class="error-message"></span>
               </div>
               <div
                 class="formData">
-                <label>Date de naissance</label><br>
+                <label for="birthdate">Date de naissance</label><br>
                 <input
-                  class="text-control"
+                  class="text-control inpDATE"
                   type="date"
                   id="birthdate"
                   name="birthdate"
                 /><br>
+                <span id="date-error" class="error-message"></span>
               </div>
               <div
                 class="formData">
-                <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+                <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+                <p id="qtn-error" class="error-message"></p>
+                <input type="number" class="text-control inpQtn" id="quantity" name="quantity" min="0" max="99">
+                <small class="quantity-error"></small>
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
               <div
@@ -177,25 +185,28 @@
                   <span class="checkbox-icon"></span>
                   Portland</label
                 >
+                <br> 
+                <p id="loc-error" class="error-message"></p>
               </div>
 
               <div
                 class="formData">
                 <input
-                  class="checkbox-input"
+                  class="checkbox-input conditions"
                   type="checkbox"
                   id="checkbox1"
                   checked
                 />
-                <label class="checkbox2-label" for="checkbox1" required>
+                <label class="checkbox2-label" for="checkbox1">
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
                 <br>
-                <input class="checkbox-input" type="checkbox" id="checkbox2" />
+                <p id="cond-error" class="error-message"></p>
+                <input class="checkbox-input event" type="checkbox" id="checkbox2" />
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
-                  Je Je souhaite être prévenu des prochains évènements.
+                  Je souhaite être prévenu des prochains évènements.
                 </label>
                 <br>
               </div>
@@ -207,6 +218,12 @@
               />
             </form>
           </div>
+
+          <div class="validate">   
+            <p>Merci pour votre inscription</p>  
+            <button class="close-btn">Fermer</button> 
+          </div>
+
         </div>
       </div>
     </main>
